test/functions/bradc/varFns/declVarRetNothing.good
declVarRetNothing.chpl:1: error: function declared 'var' but does not return anything
declVarRetNothing.chpl:5: error: function declared 'var' but does not return anything
